SERVER-5796 more friendly HexData